LoadOrders er lagt til, den bruker tråd for å laste inn fil. Må legge inn i tableview